<resources>
    <string name="app_name">reLearn_Iteration_One</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="number">Number</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="retrieve">Retrieve</string>
    <string name="clear">Clear</string>
    <string name="phone_number">Phone Number</string>
    <string name="priority">Priority</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="log_in">Log In</string>
    <string name="password">Password:</string>
    <string name="email_login">Email:</string>
    <string name="back">Back</string>
    <string name="register">Register</string>
    <string name="exit">Exit</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="nextslide">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title"> Welcome to re:Learn</string>
    <string name="slide_1_desc"></string>

    <string name="slide_2_title">Reduce Media Consumption</string>
    <string name="slide_2_desc"></string>

    <string name="slide_3_title">While Revising Material</string>
    <string name="slide_3_desc"></string>

    <string name="slide_4_title">And Tracking Progress</string>
    <string name="slide_4_desc"></string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string-array name="subject_array">
        <item>Subject Selection</item>
        <item>Math</item>
        <item>English</item>
        <item>Irish</item>
    </string-array>

</resources>